Added message to the pop-up thing.

--- a/showEvents.html
+++ b/showEvents.html
@@ -58,17 +58,20 @@
 <!-- Modal -->
 <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
   <div class="modal-dialog">
-    <div class="modal-content">
+    <div class="modal-content" id = "popupMessage">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-        <h4 class="modal-title" id="myModalLabel">Modal title</h4>
+        <h4 class="modal-title" id="myModalLabel">Beach Party</h4>
       </div>
       <div class="modal-body">
-        ...
+        <p><strong>Location </strong> <small>Irvine, CA </small></p>
+        <p><strong>Time </strong> <small>May 20, 2015 </small></p>
+        <p><strong>Host </strong> <small>Kyle Hong</small></p>
+        <p><strong>Notes </strong> <small>Average age will be around 15.  Maybe we can go to the gym together after the beach. </small></p>
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary">Save changes</button>
+        <button type="button" class="btn btn-primary" data-dismiss="modal">Join</button>
       </div>
     </div>
   </div>
